client-connector now published to npm

--- a/client-connector/package.json
+++ b/client-connector/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "client-connector",
+  "name": "dw-client-connector",
   "version": "0.1.0",
-  "description": "",
+  "description": "Client connector to be used by modules.",
   "main": "dist/index.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
