--- a/sample-pages/supplier-module-1/package.json
+++ b/sample-pages/supplier-module-1/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "client-connector": "file:../../client-connector"
+    "dw-client-connector": "~0.1.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.0.0",
